--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.11",
+    "cors": "^2.8.5",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "get-urls": "^11.0.0",
+    "node-fetch": "^3.2.5",
+    "puppeteer": "^14.2.1"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
