--- a/functions/package.json
+++ b/functions/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.11",
     "cors": "^2.8.5",
+    "firebase": "^9.8.2",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
-    "get-urls": "^11.0.0",
-    "node-fetch": "^3.2.5",
-    "puppeteer": "^14.2.1"
+    "firebase-tools": "^11.0.1",
+    "node-fetch": "^2.6.1",
+    "puppeteer": "^1.18.1"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
