--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy to App Engine
 
 # Controls when the workflow will run
-on:
+runs-on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
