--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy to App Engine
 
 # Controls when the workflow will run
-runs-on:
+on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
@@ -13,7 +13,8 @@ runs-on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  job_id:
+  build:
+    runs-on: ubuntu-latest
     steps:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
