--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v0'
+      with:
+        working-directory: ./
+        deliverables: app.yaml
 
     - id: 'test'
       run: 'curl "${{ steps.deploy.outputs.url }}"'
