--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - id: 'deploy'
       uses: 'google-github-actions/deploy-appengine@v0'
       with:
-        working-directory: ./
+        working_directory: ./
         deliverables: app.yaml
 
     - id: 'test'
