added repo checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       run:
         working-directory: ./
     steps:
+    - name: Checkout Repo
+      uses: actions/checkout@v2
+      
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
